# cat-light

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  TODO.md  partitions.csv
.claude/commands/: handoff.md
ESPLight-dev/: ESPLight-dev.kicad_pcb  ESPLight-dev.kicad_pro  ESPLight-dev.kicad_sch
ESPLight-v1/: ESPLight-v1.kicad_pcb
docs/: testing-brief.md
docs/design/: TEMPLATE.md  light-engine.md  mode-manager.md  persistence.md  scripting-engine.md  system.md  wifi-web.md
docs/discovery/: v2-firmware-discovery.md
docs/summaries/: handoff-2026-03-24T17:00-heap-spike.md  handoff-2026-03-24T20:00-v2-design-complete.md
main/: CMakeLists.txt  behavior.c  behavior.h  behavior_types.h  boot.c  boot.h  idf_component.yml  input.c  input.h  light_engine.c  light_engine.h  main.c  mode_manager.c  mode_manager.h  persistence.c  persistence.h  scripting_engine.c  scripting_engine.h  wifi_web.c  wifi_web.h
pcb/: ESPLight-v1.kicad_pro  ESPLight-v1.kicad_sch
